--- a/lainnya/biografi-penulis.tex
+++ b/lainnya/biografi-penulis.tex
@@ -8,10 +8,13 @@
   \centering
   \vspace{-3ex}
   % Ubah file gambar berikut dengan file foto dari mahasiswa
-  \includegraphics[width=0.3\textwidth]{gambar/elon.jpg}
+  \includegraphics[width=0.3\textwidth]{gambar/self-image.jpeg}
   \vspace{-4ex}
 \end{wrapfigure}
 
 % Ubah kalimat berikut dengan biografi dari mahasiswa
-\name{}, lahir pada 24 Agustus 2002, merupakan seseorang yang baik hati,
-suka menolong
+\noindent\name{}, lahir di Jogjakarta, 24 Agustus 2002 dan merupakan anak kedua dari
+tiga bersaudara. Penulis menempuh pendidikan formal SD Negeri Percobaan 1
+Malang, SMP Negeri 1 Malang, dan SMA Negeri 3 Malang. Penulis menjadi
+salah satu mahasiswa di Departemen Teknik Informatika FTEIC - ITS pada
+tahun 2021.
