--- a/pustaka/pustaka.bib
+++ b/pustaka/pustaka.bib
@@ -4,21 +4,6 @@ disediakan oleh penyedia sumber referensi secara online dan bisa langsung ditaru
 Lihat https://www.bibtex.com/g/bibtex-format/ untuk informasi lebih lanjut mengenai format
 BibTex yang digunakan pada file ini.
 
-@article{newton1687,
-  author = {Isaac Newton},
-  journal = {Philosophiæ Naturalis Principia Mathematica},
-  title = {Axioms or Laws of Motion},
-  year = {1687},
-}
-
-@misc{roketluarangkasa,
-  title = {Roket Luar Angkasa Discovery},
-  year = 2021,
-  url = {https://airandspace.si.edu/explore-and-learn/topics/discovery/about.cfm
-         },
-  urldate = {2021-02-03},
-}
-
 @inproceedings{borg-references,
   title = {Large-scale cluster management at {Google} with {Borg}},
   author = {Abhishek Verma and Luis Pedrosa and Madhukar R. Korupolu and David
@@ -105,9 +90,7 @@ BibTex yang digunakan pada file ini.
   author = {{The Linux Foundation}},
   title = {Bridge Wiki},
   year = {2021},
-  url = {
-         https://wiki.linuxfoundation.org/networking/bridge#what_does_a_bridge_do
-         },
+  url = { https://wiki.linuxfoundation.org/networking/bridge },
   note = "[Online; diakses pada 9 Juni 2025]",
 }
 @misc{go-website,
