--- a/bab/3-metodologi.tex
+++ b/bab/3-metodologi.tex
@@ -67,7 +67,7 @@ Sistem \emph{provisioning} pada setiap komputer \emph{worker} secara fungsi dapa
 menjadi dua bagian besar, yaitu bagian server untuk menerimaa permintaan pembuatan klaster yang dikirim
 oleh server utama dan bagian pembuatan \emph{virtual machine}.
 
-\subsection{Server}
+\subsection{Implementasi Server}
 \label{sec:server}
 
 Komputer \emph{worker} menerima \emph{request} pembuatan klaster melalui jaringan internet.
@@ -166,7 +166,7 @@ gRPC server dapat dilihat pada kode sumber \ref{lst:rpc-server-start}.
   style=codestyle,
 ]{program/rpc-start-server.go}
 
-\subsection{\emph{Provisioning}}
+\subsection{Implementasi \emph{Provisioning}}
 \label{sec:provisioning}
 
 Setelah komputer menerima \emph{request} pembuatan klaster melalui RPC,
@@ -176,8 +176,8 @@ sistem operasi Linux yang akan digunakan sebagai sistem operasi dari
 \emph{virtual machine}, mempersiapkan Linux \emph{bridge},
 implementasi QEMU dan Libvirt untuk membuat \emph{virtual machine},
 implementasi Cloud-init untuk mengkustomisasi \emph{virtual machine}, 
-implementasi \emph{queue} dan \emph{worker}, dan
-dan implementasi Websocket untuk \emph{logging}.
+serta implementasi \emph{queue} dan \emph{worker}.
+% dan implementasi Websocket untuk \emph{logging}.
 
 \subsubsection{Persiapan Linux untuk \emph{Virtual Machine}}
 \label{sec:persiapan-linux-untuk-virtual-machine}
@@ -209,7 +209,7 @@ sebagai berikut:
 
 \begin{lstlisting}[
   style=clistyle,
-  keywords={},
+  caption={\emph{Command} Linux untuk Konfigurasi \emph{Cloud Image}}
 ]
 # virt-customize --add oracular-server-cloudimg-amd64.img --root-password password:root
 \end{lstlisting}
@@ -258,7 +258,7 @@ adalah enp1s0, dapat menggunakan \emph{command line} sebagai berikut:
 
 \begin{lstlisting}[
   style=clistyle,
-  keywords={},
+  caption={\emph{Command} Linux untuk Konfigurasi Linux \emph{Bridge}},
 ]
 # nmcli con add type bridge ifname k3s-br0 con-name k3s-br0
 # nmcli con add type bridge-slave ifname enp1s0 master k3s-br0
@@ -442,10 +442,10 @@ mendapatkan data permintaan dan parameter yang dibutuhkan untuk \emph{provisioni
 permintaan dan parameter diteruskan ke fungsi untuk membuat \emph{instance}
 dari \emph{virtual machine}.
 
-\subsubsection{Implementasi Websocket}
-\label{sec:implementasi-websocket}
-
-Untuk menunjukkan proses dalam pembuatan \emph{virtual machine}
+% \subsubsection{Implementasi Websocket}
+% \label{sec:implementasi-websocket}
+%
+% Untuk menunjukkan proses dalam pembuatan \emph{virtual machine}
 
 \subsubsection{Implementasi QEMU dan Libvirt}
 \label{sec:implementasi-libvirt}
@@ -587,12 +587,20 @@ Proses \emph{provisioning} menggunakan Libvirt terdiri dari beberapa langkah, ya
 
 \end{enumerate}
 
-\section{Implementasi \emph{Dashboard}}
-\label{sec:implementas-sistem-dashboard}
+\section{Implementasi Situs Web}
+\label{sec:implementas-situs-web}
+
+Situs web yang dibuat akan digunakan sebagai pengguna untuk membuat
+klaster Kubernetes menggunakan \emph{virtual machine} yang dibuat
+oleh sistem \emph{provisioning}. Implementasi situs web dibagi menjadi
+dua yaitu implementasi bagian \emph{frontend} dan bagian \emph{backend}.
+
+\subsection{Implementasi \emph{Frontend}}
+\label{subsec:implementas-frontend}
 
 Situs web \emph{dashboard} merupakan antarmuka yang akan digunakan oleh \emph{user}
 untuk membuat klaster Kubernetes. Pada situs web tersebut, terdapat
-informasi mengenai identitas komputer apa yang terdaftar atau yang siap
+informasi mengenai identitas komputer yang siap
 menerima permintaan untuk membuat \emph{virtual machine}.
 Tampilan dari \emph{dashboard} dapat dilihat pada gambar
 dan \ref{fig:dashboard-with-node}.
@@ -604,9 +612,23 @@ dan \ref{fig:dashboard-with-node}.
   \label{fig:dashboard-with-node}
 \end{figure}
 
-\subsection{Implementasi Tampilan saat Membuat Klaster}
+Pada contoh gambar \ref{fig:dashboard-with-node}, terdapat satu komputer \emph{worker}
+yang siap untuk menerima permintaan, yaitu komputer yang memiliki \emph{hostname} hudson dan alamat
+ip 10.125.155.249.
 
-\section{Bahan dan Peralatan yang Digunakan}
-\label{sec:implementasi alat}
+% TODO: implementasi backend
+\subsection{Implementasi \emph{Backend}}
+\label{subsec:implementas-backend}
 
-askjdhalskdk
+Bagian \emph{backend} dari situs web bertanggung jawab untuk menangani permintaan
+yang dibuat pengguna pada bagian \emph{frontend}. Selain itu, bagian \emph{backend}
+juga bertanggung jawab untuk melakukan komunikasi dengan komputer \emph{worker} menggunakan
+protokol RPC melalui gRPC. Garis besar pertukaran informasi dan komunikasi
+dapat dilihat pada gambar \ref{fig:frontend-backend-worker}.
+
+\begin{figure}[H]
+  \centering
+  \fbox{\includegraphics[scale=0.55]{gambar/frontend-backend-worker.png}}
+  \caption{Komunikasi \emph{Frontend-Backend-Worker}}
+  \label{fig:frontend-backend-worker}
+\end{figure}
