--- a/lainnya/kata-pengantar.tex
+++ b/lainnya/kata-pengantar.tex
@@ -1,4 +1,4 @@
-\chapter*{LEMBAR PENGESAHAN}
+\chapter*{KATA PENGANTAR}
 
 \addcontentsline{toc}{chapter}{KATA PENGANTAR}
 
@@ -22,9 +22,9 @@ Oleh karena itu, penulis mengucapkan terima kasih kepada:
     pembimbing kedua penulis yang telah membantu penulis dalam menyelesaikan Tugas Akhir.
 
   \item Keluarga penulis, Ibu penulis, Bapak penulis dan dua Saudara penulis yang telah 
-    memberikan dukungan kepada penulis. \lipsum[3][1-2]
+    memberikan dukungan kepada penulis.
 
-  \item Teman-teman "\emph{Backstreet Boys}"
+  % \item Teman-teman "\emph{Backstreet Boys}"
     
   \item Alwan Raihan, Bhatara Arundaya, Orisvio Revanda, S.T., Rayhan Rizky, dan Tigo Yoga
     selaku teman-teman "Ahmad Dahlan" yang telah memberikan semangat dan dukungan kepada
